--- a/StockPro/.project
+++ b/StockPro/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>StockPro</name>
+	<name>StockPortfolio</name>
 	<comment></comment>
 	<projects>
 	</projects>
